[package]
name = "testing"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
typetag = "0.1.3"
downcast-rs = "1.0.4"
